Creación de la vista/layout login

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,8 @@ clean.dependsOn(clean_assets)
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    // compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
