--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".Actividades.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Dark"
             >
@@ -19,17 +19,17 @@
             </intent-filter> !-->
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".Actividades.LoginActivity"
             android:theme="@style/AppTheme.Dark"
             >
         </activity>
         <activity
-            android:name=".RegisterActivity"
+            android:name=".Actividades.RegisterActivity"
             android:theme="@style/AppTheme.Dark"
             >
         </activity>
         <activity
-            android:name=".SplashActivity"
+            android:name=".Actividades.SplashActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
