--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.1'
     defaultConfig {
         applicationId "com.bradleybossard.androidprogramabdemo"
         minSdkVersion 21
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -33,9 +33,10 @@ clean.dependsOn(clean_assets)
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     // compile 'com.android.support:appcompat-v7:21.0.3'
+    compile files('C:/Users/Gachi/AndroidStudioProjects/muniBotOK - copia/app/libs/jFuzzyLogic.jar')
+
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile files('C:/Users/Gachi/AndroidStudioProjects/muniBotOK/app/libs/jFuzzyLogic.jar')
-
+    compile 'com.google.android.gms:play-services:9.0.1'
 }
