--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,46 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bradleybossard.androidprogramabdemo" >
+    package="com.bradleybossard.androidprogramabdemo">
+
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="com.google.android.gsf.permission.READ_GSERVICES"/>
+
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".Actividades.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.Dark"
-            >
-        <!--    <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> !-->
-        </activity>
-        <activity
-            android:name=".Actividades.LoginActivity"
-            android:theme="@style/AppTheme.Dark"
-            >
-        </activity>
-        <activity
-            android:name=".Actividades.RegisterActivity"
-            android:theme="@style/AppTheme.Dark"
-            >
-        </activity>
-        <activity
-            android:name=".Actividades.InvitadoActivity"
             android:theme="@style/AppTheme.Dark">
         </activity>
         <activity
+            android:name=".Actividades.LoginActivity"
+            android:theme="@style/AppTheme.Dark"></activity>
+        <activity
+            android:name=".Actividades.RegisterActivity"
+            android:theme="@style/AppTheme.Dark"></activity>
+        <activity
+            android:name=".Actividades.InvitadoActivity"
+            android:theme="@style/AppTheme.Dark"></activity>
+        <activity
             android:name=".Actividades.SplashActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+        <activity
+            android:name=".Actividades.MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
     </application>
 
 </manifest>
